<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:padding="16dp">

    <TextView android:id="@+id/pb_title"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/privat_bank"
              android:textSize="18sp"
              android:textColor="@color/colorTextDark"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintStart_toStartOf="parent"/>

    <ImageView android:id="@+id/pb_date_iv"
               android:layout_width="wrap_content"
               android:layout_height="0dp"
               android:src="@drawable/ic_today_grey_24dp"
               android:layout_marginEnd="4dp"
               android:layout_marginRight="4dp"
               app:layout_constraintTop_toTopOf="@id/pb_date_title"
               app:layout_constraintBottom_toBottomOf="@id/pb_date_title"
               app:layout_constraintEnd_toStartOf="@id/pb_date_title"
               android:contentDescription="@string/select_date" />

    <TextView android:id="@+id/pb_date_title"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="18sp"
              android:textColor="@color/colorAccent"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintEnd_toEndOf="parent"/>

    <TextView android:id="@+id/currency_title"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/currency"
              android:textSize="16sp"
              android:layout_marginTop="8dp"
              app:layout_constraintTop_toBottomOf="@id/pb_title"
              app:layout_constraintStart_toStartOf="parent"/>

    <TextView android:id="@+id/purchase_title"
              android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/purchase"
              android:textSize="16sp"
              app:layout_constraintBottom_toBottomOf="@id/currency_title"
              app:layout_constraintStart_toEndOf="@id/currency_title"
              app:layout_constraintEnd_toStartOf="@id/sale_title"/>


    <TextView android:id="@+id/sale_title"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/sale"
              android:textSize="16sp"
              app:layout_constraintBottom_toBottomOf="@id/currency_title"
              app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView android:id="@+id/pb_rv"
                                               android:layout_width="match_parent"
                                               android:layout_height="0dp"
                                               android:layout_marginTop="4dp"
                                               app:layout_constraintTop_toBottomOf="@id/currency_title"
                                               app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
